# libdt

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.devel  README.md  astyle.options  localtime.h  localtime_unix.c  localtime_win32.c  main.c
analytics/code_sample/: code_sample.c  code_sample.h  code_sample_unix.h  code_sample_win.h
cmake/: AstyleFormatSource.cmake  CodeCoverage.cmake  DefaultsSetup.cmake  FindTZ.cmake  TZPack.cmake
doc/: conf.py  index.rst
include/: CMakeLists.txt  dt.h  dt_precise.h  dt_types.h
include/dt-private/: tzmapping.h
include/libdt/: dt.h  dt_convert.h  dt_posix.h  dt_precise.h  dt_types.h  export.h  tzmapping.h
include/libtz/: dt.h  dt_precise.h  dt_types.h  localtime.h  timezone.h  tzmapping.h
resources/: windowsZones.xml
scripts/: CMakeLists.txt  transform.py
src/: CMakeLists.txt  dt.c  dt_private.h  localtime_unix.c  localtime_win32.c  main.c  timezones_map.h  tzmapping.c  tzmapping.h
src/unix/: dt_unix.c  localtime_unix.c
src/unix/libtz/: CMakeLists.txt  libtz.c  private.h  tz.h  tzfile.h
src/win32/: dt_win32.c  localtime_win32.c
src/win32/gnutimeutils/: private.h  strptime.c
src/win32/strptime/: strptime.c
test/: CMakeLists.txt  basiccase.cpp  basiccase.h  dt_case.cpp  dt_case.h  performancecase.cpp  performancecase.h  posixcase.cpp  posixcase.h  testlibtz.cpp  time_zone_name_mapping_case.cpp  time_zone_name_mapping_case.h
