set(TESTS_EXECUTABLE tests)
find_package(GTest)
if(GTEST_FOUND)
    message(STATUS "Google tests found, unit tests are available")
    enable_testing()
    include_directories(${GTEST_INCLUDE_DIRS})
    find_package( Threads )
    aux_source_directory(. SRC_LIST)
    add_executable(${TESTS_EXECUTABLE} ${SRC_LIST})

    if(UNIX)
        target_link_libraries(${TESTS_EXECUTABLE} ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${PROJECT_NAME} rt m)
    elseif(WIN32)
        if(CMAKE_COMPILER_IS_GNUCXX)
            target_link_libraries(${TESTS_EXECUTABLE} kernel32 ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${PROJECT_NAME} )
        else(CMAKE_COMPILER_IS_GNUCXX)
            target_link_libraries(${TESTS_EXECUTABLE} ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${PROJECT_NAME} )
        endif(CMAKE_COMPILER_IS_GNUCXX)
    endif(UNIX)
    add_test(all-tests ${TESTS_EXECUTABLE})
else()
    message(WARNING "No google tests found so unit tests are not available")
endif()

